# gimnasio

./: pyproject.toml
gimnasio/: .env  README.md  db.sqlite3
gimnasio/gimnasio/: asgi.py  settings.py  urls.py  wsgi.py
gimnasio/socios/: form.py  forms.py  models.py  urls.py  views.py
gimnasio/socios/management/commands/: cargar_datos.py
gimnasio/socios/migrations/: 0001_initial.py  0002_clase_cupo_maximo.py  0003_alter_entrenador_id_alter_socio_id.py  0004_alter_clase_nombre.py
gimnasio/socios/templates/socios/: apuntar_clase.html  clase_create.html  clase_detail.html  clase_list.html  entrenador_create.html  entrenador_list.html  home.html  socio_confirm_delete.html  socio_create.html  socio_detail.html  socio_editar.html  socio_list.html
