[tool.poetry]
name = "pirineus"
version = "0.1.0"
description = ""
authors = ["rhernandezmy <rhernandezmy@fpvirtualaragon.es>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=5.1,<6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
